--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
+/* @import "../../node_modules/bootstrap/dist/css/bootstrap.min.css"; */
 
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
